Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-42826

Crash in delivery of gesture events to disappearing tooltip

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • None
    • 5.4.0 Beta
    • None
    • I only tested on Mac. I suppose that it could happen on any platform with an input device that supports gestures.
    • 033318f7a747ee2630542bed37df7e3fc10a0fb1

    Description

      QGuiApplication fails to check for a valid receiver before sending gesture events. To reproduce open assistant on a Mac with a trackpad or magic mouse. Hover over one of the toolbar buttons until the tooltip pops up. Move the mouse cursor over the tooltip and scroll as the tooltip starts to disappear.

      It's easiest to reproduce with the magic mouse middle scroll gesture, but I can also get it to crash with the trackpad two finger scroll gesture.

      I have a patch which I'll propose shortly on gerrit. This issue has plagued me ever since switching to Qt 5. I think that it should be a release blocker.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            mmutz Marc Mutz
            jasonhaslam Jason Haslam
            Votes:
            1 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes