Check for valid receiver before sending gesture events.

Gesture events sent to a disappearing tooltip can crash. This can most
easily be seen by scrolling over a tooltip on OSX with a magic mouse
middle scroll gesture.

Task-number: QTBUG-42826
Change-Id: Id5510895f63297ca157e3d24a3f4e3a6034586e8
Reviewed-by: Andy Shaw <andy.shaw@digia.com>
Reviewed-by: Shawn Rutledge <shawn.rutledge@digia.com>
Reviewed-by: Laszlo Agocs <laszlo.agocs@theqtcompany.com>

cregit: 033318f7a747ee2630542bed37df7e3fc10a0fb1 https://github.com/qt/qtbase/commit/033318f7a747ee2630542bed37df7e3fc10a0fb1